# NutriWise

./: .gitignore  README.md
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  deps.py  lambda_handler.py  main.py
api/app/core/: config.py  logging.py  security.py
api/app/models/: booking.py  food.py  health.py  nutritionist.py
api/app/repositories/: __init__.py  base.py  dynamo.py  factory.py  memory.py
api/app/routers/: bookings.py  food.py  health.py  nutritionists.py
api/app/services/: bedrock.py  bookings.py  daily_summary.py  matching.py  pricing.py  uploads.py
api/tests/: conftest.py  test_api_bookings.py  test_api_health.py  test_api_nutritionists.py  test_auth_cognito.py  test_bookings.py  test_daily_summary.py  test_dynamo_integration.py  test_health_math.py  test_matching.py  test_uploads.py
docs/: architecture.md  compliance.md  cost.md  roadmap.md
infra/: README.md  app.py  cdk.json  pyproject.toml
infra/nutriwise_cdk/: api_stack.py  auth_stack.py  data_stack.py  media_stack.py
infra/tests/: test_stacks.py
mobile/: README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  bookings.tsx  find.tsx  index.tsx  log.tsx  profile.tsx  today.tsx
mobile/app/nutritionist/: [id].tsx
mobile/src/components/: Badge.tsx  Button.tsx  Card.tsx  Screen.tsx
mobile/src/services/: api.ts  auth.ts
mobile/src/theme/: colors.ts  tokens.ts
scripts/: seed_local.sh
